--- a/app/src/main/res/layout/content_problems_list.xml
+++ b/app/src/main/res/layout/content_problems_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ProblemsList"
+    tools:context=".ProblemsListActivity"
     tools:showIn="@layout/activity_problems_list">
 
 </android.support.constraint.ConstraintLayout>
