--- a/app/src/main/res/menu/menu_report.xml
+++ b/app/src/main/res/menu/menu_report.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="v2.hackupc.guts2018.ciudadnube.ReportActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/company_login"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/company_login"
         app:showAsAction="never" />
 </menu>
