--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:background">@android:drawable/list_selector_background</item>
+        <item name="android:background">@color/splashBackground</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
